# platform-kernel

./: CMakeLists.txt  LICENSE  README.md  aKernel_init.c
inc/: aKernel_def.h  aKernel_init.h
